# xero-main

./: README.md  package-lock.json
xero/: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
xero/src/business_profile/: business_profile.did
xero/src/business_profile/src/: lib.rs
xero/src/data_aggregator/: Cargo.toml  data_aggregator.did
xero/src/data_aggregator/src/: lib.rs
xero/src/inventory/: Cargo.toml  Inventory.md  inventory.did
xero/src/inventory/src/: lib.rs
xero/src/ledger/: Cargo.toml  ledger.did
xero/src/ledger/src/: lib.rs
xero/src/price_engine/: Cargo.toml  price_engine.did
xero/src/price_engine/src/: lib.rs
xero/src/xero_frontend/: assetstorage.did  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
xero/src/xero_frontend/src/: App.jsx  App.tsx  ic-config.js  index.css  index.scss  index.tsx
xero/src/xero_frontend/src/components/: ErrorBoundary.tsx  Header.tsx  LoadingTransition.tsx  ProgressDots.tsx  Sidebar.tsx  Upload.jsx  WalletCard.tsx
xero/src/xero_frontend/src/components/layout/: Header.tsx  Navbar.tsx  OnboardingLayout.tsx  Sidebar.tsx
xero/src/xero_frontend/src/config/: actors.ts  canister.ts  fonts.ts
xero/src/xero_frontend/src/context/: StepContext.tsx
xero/src/xero_frontend/src/hooks/: useAuth.ts
xero/src/xero_frontend/src/interfaces/: user.ts
xero/src/xero_frontend/src/types/: business.ts  env.d.ts
xero/src/xero_frontend/src/utils/: createSampleExcel.ts  sampleInventory.ts  validation.ts
(+22 files in other folders)
