[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.6.10"            # Core dependency for Internet Computer canister development
ic-cdk-macros = "0.6.10"      # Macros for initialization and update/query functions
serde = { version = "1.0", features = ["derive"] }   # Serialization and deserialization
serde_json = "1.0"            # Optional: for JSON output
candid = "0.8"                # Candid for defining the canister interface

[lib]
crate-type = ["cdylib"]
